# typst-manager

./: .gitignore  BACKLOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUTURE_WORK.md  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml  release.ps1
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
scripts/: create_github_issues.ps1  create_github_issues.sh  setup_repo_security.ps1
tests/: test_all.py
typst_manager/: cli.py  config.py  platform.py  template_store.py
typst_manager/commands/: config_cmd.py  man_cmd.py  new.py  template.py
typst_manager/man/: typst-manager.1
