[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "typst-manager"
version = "0.2.0"
description = "Manage Typst templates and documents from the command line"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Mario Orviz Viesca", email = "marioorvvie@gmail.com" },
]
keywords = ["typst", "templates", "cli", "documents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/orvizz/typst-manager"
Repository = "https://github.com/orvizz/typst-manager"
"Bug Tracker" = "https://github.com/orvizz/typst-manager/issues"

[project.scripts]
typst-manager = "typst_manager.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]

[tool.setuptools.packages.find]
where = ["."]
include = ["typst_manager*"]

[tool.setuptools.package-data]
typst_manager = ["man/typst-manager.1"]
